--- a/crystals/2019-08-02/case1.1/GNBF_calibrate_from_Xtlvecs.ipynb
+++ b/crystals/2019-08-02/case1.1/GNBF_calibrate_from_Xtlvecs.ipynb
@@ -26,9 +26,9 @@
     "# Local imports\n",
     "import sys\n",
     "sys.path.append('../../../')\n",
-    "import stlstuff as sls\n",
+    "# import stlstuff as sls (not nessesary)\n",
     "import imagestuff as ims\n",
-    "import facetbrightnessstuff9 as fbs \n",
+    "# import facetbrightnessstuff9 as fbs (not nessesary)\n",
     "import f90nml"
    ]
   },
@@ -1947,7 +1947,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
