Fixed error from before (it needed to be able to access files that were higher in the directory (due to addition of the run 1 and run 2)). Currently encountering an error in GNBF_analyzeroughness_of_flattened_npz in box 24. It says that the array must not contain infs or NaNs.

--- a/crystals/2020-06-24/Run 1/case1.1 (ablation roughening)/GNBF_retrieve.ipynb
+++ b/crystals/2020-06-24/Run 1/case1.1 (ablation roughening)/GNBF_retrieve.ipynb
@@ -13,14 +13,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'imagestuff'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-1e40967dc929>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msys\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[0msys\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'../../../'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mimagestuff\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mims\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mretrievestuff\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mrs\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mf90nml\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'imagestuff'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA not available.\n"
      ]
     }
    ],
@@ -41,7 +37,7 @@
     "\n",
     "# Local imports\n",
     "import sys\n",
-    "sys.path.append('../../../')\n",
+    "sys.path.append('../../../../')\n",
     "import imagestuff as ims\n",
     "import retrievestuff as rs\n",
     "import f90nml\n",
@@ -51,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
